[package]
name = "spin_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
serde_json = "1"
futures = "0.3"
spin = { version = "0.12.0", features = ["barrier", "fair_mutex", "lazylock", "lock_api", "mutex", "once", "portable-atomic", "rwlock", "spin_mutex", "std", "ticket_mutex", "use_ticket_mutex"] }
