[package]
name = "uuid_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
serde_json = "1"
futures = "0.3"
uuid = { version = "1.23.3", features = ["borsh", "fast-rng", "js", "md5", "rng", "rng-getrandom", "rng-rand", "serde", "sha1", "std", "v1", "v3", "v4", "v5", "v6", "v7", "v8"] }
